k8s/overlays/staging/db-managed-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deployment
  namespace: audiomind
spec:
  template:
    spec:
      containers:
        - name: user-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: audiomind
spec:
  replicas: 0
